tests/NormalTests/paczka2/big_fuzzy/58397464.err
Error in line 2: URL6 S81 20,3
Error in line 20: yMRm S590 65,0
Error in line 21: yMRm S597 96,7
Error in line 34: URL6 S81 43,1
Error in line 37: 87KmJu S590 36,2
Error in line 48: BGaYXMEoC A868 10,2
Error in line 38: 87KmJu S597 87,1
Error in line 49: BGaYXMEoC S597 70,9
Error in line 67: URL6 S590 409,1
Error in line 76: BGaYXMEoC S590 99,8
Error in line 82: mQpTdne S81 65,5
Error in line 102: TC84S S590 52,1
Error in line 110: TC84S S597 95,5
Error in line 107: BGaYXMEoC S597 90,5
Error in line 115: A868 S597 46,9
Error in line 123: URL6 S590 97,5
Error in line 98: 87KmJu S590 1,8
Error in line 136: BGaYXMEoC S597 95,3
Error in line 143: yMRm S597 51,2
Error in line 148: TC84S S597 29,66
Error in line 146: A868 S590 96,8
Error in line 140: TC84S A868 20,4
Error in line 151: TC84S S597 75,8
Error in line 144: yMRm S590 4,5
Error in line 137: URL6 S597 24,8
Error in line 160: A868 A868 166,7
Error in line 173: 87KmJu S590 97,3
Error in line 168: A868 S590 66,7
Error in line 190: TC84S A868 4,1
Error in line 198: BGaYXMEoC A868 48,0
Error in line 193: TC84S S597 67,5
Error in line 204: TC84S S81 82,5
Error in line 245: mQpTdne A868 74,5
